Bugfix for defaults ref shadow cut off

--- a/src/app/form/ext/ext.component.scss
+++ b/src/app/form/ext/ext.component.scss
@@ -11,4 +11,5 @@ details[open] {
 
 app-ref {
   max-width: 100%;
+  margin: 4px;
 }
